--- a/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
+++ b/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
@@ -208,11 +208,14 @@
                 Territori harus diisi
               </mat-error>
             </mat-form-field>
-            <mat-form-field fxFlex="31%" class="is-light form-primary">
-              <mat-select placeholder="GSW" formControlName="gsw">
-                <mat-option *ngFor="let item of listGsw" [value]="item.value">{{item.name}}</mat-option>
-              </mat-select>
-            </mat-form-field>
+          </div>
+          <div fxFlex="100" fxLayout="row wrap" fxLayout.lt-md="column" class="py-16" fxLayoutGap="20px"
+          fxLayoutGap.lt-md="0px" fxLayoutAlign="start stretch">
+              <mat-form-field fxFlex="31%" class="is-light form-primary" fxLayoutGap="20px">
+                <mat-select placeholder="GSW" formControlName="gsw">
+                  <mat-option *ngFor="let item of listGsw" [value]="item.value">{{item.name}}</mat-option>
+                </mat-select>
+              </mat-form-field>
           </div>
 
           <div fxLayout="row" *ngIf="seeTokoCabang">
