--- a/src/app/pages/device-authentication/device-authentication.component.html
+++ b/src/app/pages/device-authentication/device-authentication.component.html
@@ -13,34 +13,15 @@
         <div>({{value | timeRemaining}})</div>
       </div>
       <div class="middle-form">
-        <form name="form" (ngSubmit)="submit()">
+        <form name="form" [formGroup]="activationForm">
           <div fxLayout="row wrap" fxLayoutAlign="center center" fxFlex="1 0 auto" fxLayoutGap="10px">
-            <mat-form-field fxFlex="11" class="is-light form-primary" appearance="outline" style="text-align: center;">
-              <input matInput type="text" [formControl]="digit1" #digit1>
-            </mat-form-field>
-            <!-- <div flex="1"></div> -->
-            <mat-form-field fxFlex="11" class="is-light form-primary" appearance="outline" style="text-align: center;">
-              <input matInput type="text" [formControl]="digit2" #digit2>
-            </mat-form-field>
-            <!-- <div flex="1"></div> -->
-            <mat-form-field fxFlex="11" class="is-light form-primary" appearance="outline" style="text-align: center;">
-              <input matInput type="text" [formControl]="digit3" #digit3>
-            </mat-form-field>
-            <!-- <div flex="1"></div> -->
-            <mat-form-field fxFlex="11" class="is-light form-primary" appearance="outline" style="text-align: center;">
-              <input matInput type="text" [formControl]="digit4" #digit4>
-            </mat-form-field>
-            <!-- <div flex="1"></div> -->
-            <mat-form-field fxFlex="11" class="is-light form-primary" appearance="outline" style="text-align: center;">
-              <input matInput type="text" [formControl]="digit5" #digit5>
-            </mat-form-field>
-            <!-- <div flex="1"></div> -->
-            <mat-form-field fxFlex="11" class="is-light form-primary" appearance="outline" style="text-align: center;">
-              <input matInput type="text" [formControl]="digit6" #digit6>
+            <mat-form-field fxFlex="50" class="is-light form-primary" appearance="outline" style="text-align: center;">
+              <input matInput type="text" formControlName="code">
             </mat-form-field>
           </div>
           <div class="login-button" fxLayout="column">
-            <button mat-raised-button aria-label="Login" type="submit" color="primary-red" [disabled]="submitting">
+            <button mat-raised-button aria-label="Login" type="submit" color="primary-red" [disabled]="submitting"
+              (click)="submit()">
               <ng-container *ngIf="submitting == false">
                 Verifikasi Perangkat
               </ng-container>
