--- a/src/app/pages/user-management/paguyuban/create/paguyuban-create.component.html
+++ b/src/app/pages/user-management/paguyuban/create/paguyuban-create.component.html
@@ -40,8 +40,8 @@
                   Username harus diisi.
                 </mat-error>
               </mat-form-field>
-              <div fxLayout="column">
-                <label for="" class="mb-15" style="color: #333333;">Kata Sandi harus memiliki 8 karakter, serta mengandung huruf besar dan huruf kecil</label>
+              <div fxLayout="column" class="mb-20">
+                <label for="" class="mb-20" style="color: #333333;">Kata Sandi harus memiliki 8 karakter, serta mengandung huruf besar dan huruf kecil</label>
                 <mat-form-field fxFlex="100" class="is-light mb-24">
                   <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi">
                   <input matInput type="password" *ngIf="!showPassword" formControlName="password"
