--- a/src/app/pages/user-management/paguyuban/edit/paguyuban-edit.component.html
+++ b/src/app/pages/user-management/paguyuban/edit/paguyuban-edit.component.html
@@ -39,8 +39,8 @@
           </mat-form-field>
 
           <div *ngIf="!isDetail">
-            <div fxLayout="column">
-              <label for="" style="color: #333333;">Kata Sandi harus memiliki 8 karakter, serta mengandung huruf besar dan huruf kecil</label>
+            <div fxLayout="column" class="mb-20">
+              <label for="" style="color: #333333;" class="mb-20">Kata Sandi harus memiliki 8 karakter, serta mengandung huruf besar dan huruf kecil</label>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi">
                 <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi">
