--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
@@ -143,8 +143,7 @@
                 </div>
 
                 <mat-form-field fxFlex="50" class="pt-24" *ngIf="formDetilVoucher.get('limit_by_product').value">
-                  <mat-chip-list #chipList aria-label="Product List"
-                    [disabled]="!formDetilVoucher.get('limit_by_product').value">
+                  <mat-chip-list #chipList aria-label="Product List">
                     <mat-chip *ngFor="let product of productList" [selectable]="selectable" [removable]="removable"
                       (removed)="remove(product)">
                       {{product.name}}
@@ -168,8 +167,7 @@
 
                 <!-- fitur multiple category -->
                 <mat-form-field fxFlex="50">
-                  <mat-select placeholder="Batasan Berdasarkan Kategori" formControlName="category"
-                    [disabled]="!formDetilVoucher.get('limit_by_category').value" multiple>
+                  <mat-select placeholder="Batasan Berdasarkan Kategori" formControlName="category" multiple>
                     <mat-option *ngFor="let cat of listCategories" [value]="cat.id">{{ cat.name }}</mat-option>
                   </mat-select>
                 </mat-form-field>
@@ -221,7 +219,8 @@
             <div>
               <div class='import-export-bar p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center">
                 <div class="button-row">
-                  <button mat-flat-button style="width: 160px" color="white" (click)="importRetailer()">
+                  <button mat-flat-button style="width: 160px" color="white" (click)="importRetailer()"
+                    *ngIf="!this.permission.b2b_approval">
                     <mat-icon>vertical_align_bottom</mat-icon> Import XLS
                   </button>
                 </div>
@@ -366,7 +365,7 @@
                 </ngx-datatable-column>
               </ngx-datatable>
               <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center"
-                *ngIf="isDetail && detailVoucher.status !== 'need-approval'">
+                *ngIf="isDetail && detailVoucher.status !== 'need-approval' && !this.permission.b2b_approval">
                 <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
                   (click)="onSavePanelRetailer()">
                   SIMPAN
