--- a/src/app/pages/b2-bvoucher/panel-mitra-voucher/panel-mitra-voucher.component.html
+++ b/src/app/pages/b2-bvoucher/panel-mitra-voucher/panel-mitra-voucher.component.html
@@ -2,7 +2,8 @@
   <div>
     <div class='import-export-bar p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center">
       <div class="button-row">
-        <button mat-flat-button style="width: 160px" color="white" (click)="importMitra()">
+        <button mat-flat-button style="width: 160px" color="white" (click)="importMitra()"
+          *ngIf="!this.permissions.b2b_approval">
           <mat-icon>vertical_align_bottom</mat-icon> Import XLS
         </button>
       </div>
@@ -145,7 +146,7 @@
       </ngx-datatable-column>
     </ngx-datatable>
     <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center"
-      *ngIf="isDetail && statusVoucher !== 'need-approval'">
+      *ngIf="isDetail && statusVoucher !== 'need-approval' && !this.permissions.b2b_approval">
       <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
         (click)="onSave()">
         SIMPAN
